# SSMLearnPy

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
examples/brakereussbeam/: brb.ipynb
examples/couetteflow/: Untitled.ipynb  couetteFlowRe134.ipynb  couetteflowRe135.ipynb  main.py
examples/one_dof_oscillator/: results_ssmlearn.mat  test_SSMLearn.mat  test_normalform_transformation_benchmark_vs_ssmlearn.ipynb
examples/oscillatorchain/: ics.mat  oscillatorchain2D.ipynb
examples/sloshing/: sloshing.ipynb
examples/vortexshedding/: Untitled-1.py  vortexshedding.ipynb
ssmlearnpy/: __init__.py
ssmlearnpy/base/: apipkg.py
ssmlearnpy/geometry/: coordinates_embedding.py  dimensionality_reduction.py  encode_decode.py
ssmlearnpy/main/: main.py
ssmlearnpy/reduced_dynamics/: advector.py  normalform.py  reduced_dynamics.py  shift_or_differentiate.py
ssmlearnpy/utils/: compute_errors.py  file_handler.py  finite_time_differences.py  integrate_flows.py  iterate_map.py  list_handler.py  plots.py  postprocessing.py  preprocessing.py  resonance.py  ridge.py
tests/: Testing_get_inverse.ipynb  Untitled.ipynb  test.py  test_SSMLearn.mat  test_constrained_regression.py  test_dimensionality_reduction.py  test_lincombs.mat  test_main.py  test_misc_functions.py  test_normalform.m  test_normalform.py  test_normalform_transformation.ipynb  test_normalform_transformation_benchmark_vs_ssmlearn.ipynb  vortexshedding_plot_tests.ipynb
