[metadata]
name = ssmlearnpy
author = Mattia Cenedese
summary = SSM Learn
charset = UTF-8
home-page = https://gitlab.ethz.ch/mattiac/ssmlearnpy
project_urls = 
    Bug Tracker = https://gitlab.ethz.ch/mattiac/ssmlearnpy/-/issues
    Documentation = https://gitlab.ethz.ch/mattiac/ssmlearnpy
    Source Code = https://gitlab.ethz.ch/mattiac/ssmlearnpy
licence = GNU
classifier = 
    Topic :: SSM Learn :: Manifold Learning
    Operating System :: OS Indipendent
    Programming Language :: python
python-requires = >=3.7

[build_reno]
output-file = RELEASENOTE.txt

