[metadata]
name = ssmlearnpy
author = Mattia Cenedese, Balint Kaszas
summary = SSM Learn
charset = UTF-8
home-page = https://github.com/mattiacenedese/SSMLearnPy
project_urls = 
    Bug Tracker = https://github.com/mattiacenedese/SSMLearnPy/issues
    Documentation = https://github.com/mattiacenedese/SSMLearnPy
    Source Code = https://github.com/mattiacenedese/SSMLearnPy
licence = GNU
classifier = 
    Topic :: SSM Learn :: Manifold Learning
    Operating System :: OS Independent
    Programming Language :: python
python-requires = >=3.7

[build_reno]
output-file = RELEASENOTE.txt